# lazyaf

./: .dockerignore  .env.example  .gitignore  PLAN.md  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  dream.txt  graph-creep.txt
.claude/: settings.local.json
.github/workflows/: test.yml
.lazyaf/pipelines/: test-suite-v2.yaml  test-suite.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b8e88c7c2ce_add_step_executions_table.py  9495b26aec48_add_workspaces_table.py  a1b2c3d4e5f6_enhance_runners_table.py  b2c3d4e5f6a7_add_debug_sessions_table.py
backend/app/: config.py  database.py  main.py
backend/app/mcp/: __init__.py  __main__.py  server.py
backend/app/models/: __init__.py  agent_file.py  card.py  debug_session.py  job.py  pipeline.py  repo.py  runner.py  step_execution.py  workspace.py
backend/app/routers/: agent_files.py  cards.py  debug.py  git.py  jobs.py  lazyaf_files.py  models.py  pipelines.py  playground.py  repos.py  runners.py  steps.py  test_api.py  ws_runners.py
backend/app/schemas/: __init__.py  agent_file.py  card.py  debug.py  job.py  lazyaf_yaml.py  pipeline.py  playground.py  repo.py  runner.py  steps.py
backend/app/services/: agent_resolver.py  card_executor.py  git_server.py  job_queue.py  models_service.py  pipeline_executor.py  playground_service.py  runner_pool.py  trigger_service.py  websocket.py  workspace_service.py
backend/app/services/control_layer/: __init__.py  auth.py  docker.py  environment.py  image.py  protocol.py  workspace.py
backend/app/services/execution/: __init__.py  config_builder.py  debug_session_service.py  debug_state.py  debug_terminal.py  idempotency.py  job_recovery.py  local_executor.py  pipeline_state.py  recovery.py  remote_executor.py  router.py  runner_protocol.py  runner_state.py  state_machine.py  step_state.py  step_token.py  trigger_dedup.py  workspace_locking.py  workspace_state.py
backend/app/services/workspace/: __init__.py  execution_router.py  locking.py  pipeline_state_machine.py  state_machine.py  trigger_dedup.py
backend/docker/agent_wrapper/: claude_wrapper.py  gemini_wrapper.py
backend/docker/base/: Dockerfile
backend/docker/claude/: Dockerfile
backend/docker/control/: run.py
backend/docker/gemini/: Dockerfile
backend/runner/: Dockerfile  entrypoint.py
cli/: pyproject.toml
cli/lazyaf/: __init__.py  cli.py
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: card-workflow.spec.ts  graph-pipeline.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.svelte
historical-documents/: phase-01-project-foundation.md  phase-02-repo-and-cards.md  phase-03-runner-pool.md  phase-04-agent-integration.md  phase-05-review-flow.md  phase-06-polish.md  phase-07-mcp-interface.md  phase-08-test-capture.md  phase-08.5-cicd-foundation.md  phase-09-pipelines.md  phase-10-events-and-triggers.md  phase-11-agent-playground.md
images/base/: Dockerfile  requirements.txt
images/base/control/: __init__.py  agent_wrapper.py  backend_client.py  config.py  executor.py  run.py  (+1 more)
images/claude/: Dockerfile
images/debug-sidecar/: Dockerfile
images/gemini/: Dockerfile
images/test-runner/: Dockerfile
runner-agent/: Dockerfile  pyproject.toml
runner-agent/lazyaf_runner/: __init__.py  agent.py  cli.py  config.py  docker_orch.py
runner-claude/: Dockerfile  entrypoint.py
runner-common/: pyproject.toml
runner-common/runner_common/: __init__.py  __main__.py  base_runner.py  claude_runner.py  command_helpers.py  context_helpers.py  entrypoint.py  gemini_runner.py  git_helpers.py  job_helpers.py  test_helpers.py
runner-common/runner_common/executors/: __init__.py  base.py  claude.py  gemini.py  mock.py
runner-common/tests/: __init__.py  test_context_helpers.py  test_entrypoint.py  test_executors.py  test_git_helpers.py  test_job_helpers.py
runner-gemini/: Dockerfile  entrypoint.py
runner-mock/: Dockerfile  entrypoint.py
scripts/: test.ps1  test.sh
spikes/: security-posturing-claude.txt  security-posturing-gemini.txt
tdd/: README.md  __init__.py  conftest.py  pytest.ini
tdd/demos/: __init__.py
tdd/e2e/: __init__.py  conftest.py  test_card_execute.py  test_control_layer.py  test_graph_pipeline.py
tdd/frontend/: Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  SETUP.md  TESTING.md  package.json  playwright.config.ts  pnpm-lock.yaml  setup.ts  vitest.config.ts
tdd/integration/: __init__.py
tdd/shared/: __init__.py  docker_helpers.py  mocks.py  process_helpers.py  time_helpers.py
tdd/unit/: __init__.py
upcoming/: sprawl.md
(+202 files in other folders)
