[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lazyaf*"]

[project]
name = "lazyaf-cli"
version = "0.1.0"
description = "CLI tool for LazyAF - ingest repos and land changes"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "websockets>=15.0.1",
]

[project.scripts]
lazyaf = "lazyaf.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
