[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyaf-runner"
version = "0.1.0"
description = "LazyAF Runner Agent - connects to LazyAF backend and executes steps"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "LazyAF Team" }
]
dependencies = [
    "websockets>=12.0",
    "docker>=7.0",
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
lazyaf-runner = "lazyaf_runner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lazyaf_runner"]
